Use GH actions to run builds
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/.github/workflows/action-image-build.yaml
+++ b/.github/workflows/action-image-build.yaml
@@ -42,7 +42,7 @@ env:
 jobs:
   build-and-test:
     name: Build and test
-    runs-on: [ self-hosted, build-runner ]
+    runs-on: ubuntu-latest
     if: inputs.imagesToBuild != '' && inputs.imagesToBuild != '[]'
     strategy:
       matrix:
@@ -223,7 +223,7 @@ jobs:
   # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
   build_success:
     name: Build matrix success
-    runs-on: [ self-hosted ]
+    runs-on: ubuntu-latest
     needs:
       - build-and-test
     if: ${{ always() }}
