--- a/.github/workflows/image-rebuild.yaml
+++ b/.github/workflows/image-rebuild.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   get-changes:
     name: Collect changes
-    runs-on: [ self-hosted, actions-runner ]
+    runs-on: ubuntu-latest
     outputs:
       addedOrModifiedImages: ${{ steps.collect-changes.outputs.addedOrModifiedImages }}
     steps:
@@ -26,7 +26,7 @@ jobs:
 
   generate-build-matrix:
     name: Generate matrix for building images
-    runs-on: [ self-hosted, actions-runner ]
+    runs-on: ubuntu-latest
     needs:
       - get-changes
     outputs:
