--- a/.github/workflows/meta-invalid-issue.yaml
+++ b/.github/workflows/meta-invalid-issue.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   support:
-    runs-on: [ self-hosted, actions-runner ]
+    runs-on: ubuntu-latest
     steps:
       - uses: dessant/support-requests@v3
         with:
