--- a/.github/workflows/release-schedule.yaml
+++ b/.github/workflows/release-schedule.yaml
@@ -15,7 +15,7 @@ env:
 jobs:
   generate-build-matrix:
     name: Generate matrix for building images
-    runs-on: [ self-hosted, actions-runner ]
+    runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.fetch.outputs.changes }}
     steps:
