--- a/.github/workflows/renovate-schedule.yaml
+++ b/.github/workflows/renovate-schedule.yaml
@@ -32,7 +32,7 @@ env:
 jobs:
   main:
     name: Renovate
-    runs-on: [ self-hosted, actions-runner ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
