--- a/.github/workflows/action-image-build.yaml
+++ b/.github/workflows/action-image-build.yaml
@@ -120,12 +120,10 @@ jobs:
       # - name: Setup QEMU
       #   uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.5.0
-        with:
-          driver: kubernetes
-          driver-opts: limits.cpu=4,"tolerations=key=customer-capacity-in-reserve,value=true,effect=NoExecute",qemu.install=true # don't DOS myself!
-
+      - name: Setup Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+        
       - name: Setup GHCR
         uses: docker/login-action@v2
         with:
