--- a/.github/workflows/release-schedule.yaml
+++ b/.github/workflows/release-schedule.yaml
@@ -30,7 +30,9 @@ jobs:
 
       - name: Fetch new app versions
         id: fetch
-        run: ./.github/scripts/fetch.sh     
+        run: ./.github/scripts/fetch.sh    
+        env:
+          TOKEN: ${{ secrets.GH_PAT }} # not sure why we need the GH_PAT for this bit
 
   images-build:
     uses: geek-cookbook/containers/.github/workflows/action-image-build.yaml@main
