--- a/apps/jfa-go/Dockerfile
+++ b/apps/jfa-go/Dockerfile
@@ -6,8 +6,8 @@ COPY --from=upstream /opt/jfa-go /opt/jfa-go
 EXPOSE 8056
 EXPOSE 8057
 
-RUN addgroup seedy --gid 568 && \
-    adduser --uid 568 --gid 568 --home /config seedy 
+RUN addgroup elfie --gid 568 && \
+    adduser --uid 568 --gid 568 --home /config elfie 
 
 USER 568
 
