--- a/apps/alpine/Dockerfile
+++ b/apps/alpine/Dockerfile
@@ -54,11 +54,11 @@ RUN \
 
 #hadolint ignore=DL3018
 RUN \
-    addgroup -S seedy --gid 568 \
-        && adduser -S seedy -G seedy --uid 568 \
+    addgroup -S elfie --gid 568 \
+        && adduser -S elfie -G elfie --uid 568 \
     && \
     mkdir -p /config \
-    && chown -R seedy:seedy /config \
+    && chown -R elfie:elfie /config \
     && chmod -R 775 /config \
     && printf "/bin/bash /scripts/greeting.sh\n" > /etc/profile.d/greeting.sh \
     && printf "umask %d" "${UMASK}" > /etc/profile.d/umask.sh \
