--- a/apps/ubuntu/ci/goss.yaml
+++ b/apps/ubuntu/ci/goss.yaml
@@ -12,13 +12,13 @@ file:
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#group
 group:
-  seedy:
+  elfie:
     exists: true
     gid: 568
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#user
 user:
-  seedy:
+  elfie:
     exists: true
     uid: 568
     gid: 568
