Try to get deluge to build
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/deluge/Dockerfile
+++ b/apps/deluge/Dockerfile
@@ -1,106 +1,58 @@
-FROM debian:bullseye-slim as builder
+FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:b612a392da0d0934ce4136552afadf0c33f00a0306dfa53758b5724f26212cb2 
 
-LABEL org.opencontainers.image.source https://github.com/geek-cookbook/docker-deluge
-
-SHELL ["/bin/bash", "-c"]
-
-ARG UNRAR_VERSION=6.1.4
+ARG UNRAR_VERSION=6.1.7
+# set version label
+ARG BUILD_DATE
 ARG VERSION
-ARG cryptography=openssl
-ARG libtorrent_minimum_version=1.2.0
-ARG pythonver=python3
-ARG python=python3
-ARG deluge_git_branch=master
-ARG tag=" static with c++14 march=native"
-ARG libtorrent_branch=RC_1_2
-ARG distver=python3
-ARG LT_PATCH=""
-ARG BOOST_VERSION=1_75_0
 
-ENV VPN_ENABLED="false" VPN_LAN_NETWORK="" VPN_CONF="wg0" VPN_ADDITIONAL_PORTS="" WEBUI_PORTS="8112/tcp,8112/udp" PRIVOXY_ENABLED="false" S6_SERVICES_GRACETIME=180000 VPN_IP_CHECK_DELAY=5 UI_USERNAME="admin" UI_PASSWORD="deluge"
-ENV ARG DEBIAN_FRONTEND=noninteractive
+# environment variables
+ENV PYTHON_EGG_CACHE="/config/plugins/.python-eggs"
 
-
-# hadolint ignore=DL3008,DL3028,DL3009
-RUN apt-get update && apt-get install build-essential gnupg2 apt-transport-https \
-    unzip privoxy iptables iproute2 openresolv wireguard-tools ipcalc ruby ruby-dev \ 
-    libffi-dev git wget apt-utils software-properties-common python3 python3-setuptools \
-    python3-pip intltool python3-zope.interface python3-twisted python3-openssl python3-xdg \
-    python3-chardet python3-mako python3-setproctitle python3-rencode python3-pil \ 
-    librsvg2-common xdg-utils --no-install-recommends -y && \
-    gem install fpm && \
-    apt-get autoremove -y && \
-    apt-get clean
-
-# RUN ln -s "${CONFIG_DIR}" "${APP_DIR}/deluge"
-
-WORKDIR /opt
-RUN wget --progress=dot:giga https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.tar.gz && \
-    tar xvf boost_${BOOST_VERSION}.tar.gz && \
-    rm -f boost_${BOOST_VERSION}.tar.gz
-
-COPY ./apps/deluge/build.sh /build.sh
-COPY ./apps/deluge/app /app
-COPY ./apps/deluge/patches /patches
-
-# hadolint ignore=SC1091
-RUN bash -c ". /build.sh && _build ${LT_PATCH}"
-
-# ENTRYPOINT ["/bin/bash"]
-
-# hadolint ignore=DL3013
-RUN pip install --no-cache-dir pip && \
-    git clone -b ${deluge_git_branch} git://deluge-torrent.org/deluge.git /tmp/deluge
-    
-WORKDIR /tmp/deluge
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-RUN VERSION=$(git describe | cut -d- -f2) && \
-    git apply /patches/* && \
-    sed -i 's/-dev//g' setup.cfg && \
-    mkdir -p /root/dist && \
-    fpm --python-disable-dependency=pyxdg --python-disable-dependency=pyopenssl -d python3-openssl -d python3-xdg --python-fix-dependencies --python-bin=${pythonver} --python-package-name-prefix=${pythonver} --python-setup-py-arguments=--install-layout=deb -n deluge-common -f -p "/root/dist/deluge-common_${VERSION}.deb" --description "Deluge compiled by swizzin" -s python -t deb /tmp/deluge/setup.py && \
-    dpkg -i "/root/dist/deluge-common_${VERSION}.deb" && \
-    chmod 644 /app/deluge.UpdateTracker.py
-    
-WORKDIR /tmp
-RUN rm -rf /tmp/deluge && \
-    apt-get autoremove -y && \
-    apt-get clean
-
-WORKDIR /tmp/unrar
-RUN wget --progress=dot:giga \
-        "https://www.rarlab.com/rar/unrarsrc-${UNRAR_VERSION}.tar.gz" \
-        -O /tmp/unrar.tar.gz && \
-    tar xf \
-        /tmp/unrar.tar.gz -C \
-        /tmp/unrar --strip-components=1 && \
-    make && \
-    install -v -m755 unrar /usr/local/bin
-
-
-FROM debian:bullseye-slim
-
-# hadolint ignore=DL3008,DL3028,DL3009
-RUN apt-get update && apt-get install python3 python3-setuptools \
-    python3-pip intltool python3-zope.interface python3-twisted python3-openssl python3-xdg \
-    python3-chardet python3-mako unzip p7zip python3-setproctitle python3-rencode python3-pil iperf curl xz-utils openjdk-17-jre \ 
-    --no-install-recommends -y && \
-    apt-get autoremove -y && \
-    apt-get clean
-
-RUN curl -o /tmp/filebot.xz -L "https://get.filebot.net/filebot/FileBot_5.0.1/FileBot_5.0.1-portable.tar.xz" && \
-    mkdir -p /opt/filebot && \
-    tar xvf /tmp/filebot.xz -C /opt/filebot && \
-    rm -rf /tmp/filebot.xz && \
-    ln -s /opt/filebot/filebot.sh /usr/local/bin/filebot
-
-COPY --from=builder /usr/bin/deluge* /usr/bin/
-COPY --from=builder /usr/local/bin/unrar /usr/local/bin/
-COPY --from=builder /root/dist/ /root/dist/
-RUN dpkg -i /root/dist/*
-
-EXPOSE 8112 58846 58946 58946/udp
-
-# Try to make goss work
-ENTRYPOINT ["deluged"]
+# install software
+RUN \
+  echo "**** install build packages ****" && \
+  apk add --no-cache --upgrade --virtual=build-dependencies \
+    make \
+    g++ \
+    gcc \
+    python3-dev && \
+  echo "**** install packages ****" && \
+  apk add --no-cache --upgrade --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing \
+    python3 \
+    py3-geoip \
+    p7zip && \
+  echo "**** install unrar from source ****" && \
+  mkdir /tmp/unrar && \
+  curl -o \
+    /tmp/unrar.tar.gz -L \
+    "https://www.rarlab.com/rar/unrarsrc-${UNRAR_VERSION}.tar.gz" && \
+  tar xf \
+    /tmp/unrar.tar.gz -C \
+    /tmp/unrar --strip-components=1 && \
+  cd /tmp/unrar && \
+  make && \
+  install -v -m755 unrar /usr/local/bin && \
+  if [ -z ${VERSION+x} ]; then \
+    VERSION=$(curl -sL "http://dl-cdn.alpinelinux.org/alpine/edge/community/x86_64/APKINDEX.tar.gz" | tar -xz -C /tmp \
+    && awk '/^P:deluge$/,/V:/' /tmp/APKINDEX | sed -n 2p | sed 's/^V://'); \
+  fi && \
+  apk add -U --upgrade --no-cache \
+    deluge==${VERSION} && \  
+  echo "**** install python packages ****" && \
+  python3 -m ensurepip && \
+  pip3 install -U --no-cache-dir \
+    pip \
+    wheel && \
+  pip3 install --no-cache-dir \
+    future \
+    requests && \
+  echo "**** grab GeoIP database ****" && \
+  curl -o \
+    /usr/share/GeoIP/GeoIP.dat -L --retry 10 --retry-max-time 60 --retry-all-errors \
+    "https://infura-ipfs.io/ipfs/QmWTWcPRRbADZcLcJeANZmcJZNrcpmuQgKYBi6hGdddtC6" && \
+  echo "**** cleanup ****" && \
+  apk del --purge \
+    build-dependencies && \
+  rm -rf \
+    /root/.cache \
+    /tmp/*
