tweak shoko tests
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/shokoserver/ci/goss.yaml
+++ b/apps/shokoserver/ci/goss.yaml
@@ -4,11 +4,11 @@ process:
   Shoko.CLI:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:8111:
-    listening: true  
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:8111:
+#     listening: true  
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
