--- a/apps/qbittorrent/Dockerfile
+++ b/apps/qbittorrent/Dockerfile
@@ -60,7 +60,7 @@ RUN wget --progress=dot:giga \
     unzip \
         /tmp/vuetorrent.zip 
 
-FROM debian:stable-slim
+FROM ghcr.io/geek-cookbook/ubuntu:rolling@sha256:83295fc8e3abf3d61503b7b694a88f838ab14143e7fe173cde0496a5a3084bc5
 ARG VERSION
 
 # hadolint ignore=DL3008,DL3028,DL3009
