Add missing endpoint
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/qbittorrent/Dockerfile
+++ b/apps/qbittorrent/Dockerfile
@@ -54,3 +54,5 @@ RUN wget --progress=dot:giga \
         mv /tmp/vuetorrent /vuetorrent
 
 COPY ./apps/qbittorrent/entrypoint.sh /entrypoint.sh
+
+CMD ["/entrypoint.sh"]
