--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,11 +7,11 @@
     ":semanticCommits"
   ],
   "platform": "github",
-  "username": "rosey-bot[bot]",
+  "username": "funkypenguin-autochef",
   "repositories": ["geek-cookbook/containers"],
   "onboarding": false,
   "requireConfig": false,
-  "gitAuthor": "rosey-bot <98030736+rosey-bot[bot]@users.noreply.github.com>",
+  "gitAuthor": "funkypenguin-autochef <autochef@funkypenguin.co.nz>",
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prIgnoreNotification"],
   "commitBodyTable": true,
@@ -26,8 +26,15 @@
       "matchPackagePatterns": ["renovatebot/github-action"]
     },
     {
-      "matchDatasources": ["docker"],
+      "description": "Auto-merge digets",
+      "automerge": true,
+      "automergeType": "branch",
+      "requiredStatusChecks": null,
       "matchUpdateTypes": ["digest"],
+      "matchPackagePatterns": ["renovatebot/github-action"]
+    },    
+    {
+      "matchDatasources": ["docker"],
       "commitMessagePrefix": "📣 "
     }
   ],
