Allow automerging of digests
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,13 +26,12 @@
       "matchPackagePatterns": ["renovatebot/github-action"]
     },
     {
-      "description": "Auto-merge digets",
+      "matchUpdateTypes": ["digest"],
       "automerge": true,
       "automergeType": "branch",
-      "requiredStatusChecks": null,
-      "matchUpdateTypes": ["digest"],
-      "matchPackagePatterns": ["renovatebot/github-action"]
-    },    
+      "platformAutomerge": true,
+      "ignoreTests": true
+    }, 
     {
       "matchDatasources": ["docker"],
       "commitMessagePrefix": "📣 "
