don't automerge digests for alpine and ubuntu
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -30,7 +30,8 @@
       "automerge": true,
       "automergeType": "branch",
       "platformAutomerge": true,
-      "ignoreTests": true
+      "ignoreTests": true,
+      "excludePackagePatterns": ["alpine", "ubuntu"]
     }, 
     {
       "matchDatasources": ["docker"],
