--- a/apps/openbooks/ci/goss.yaml
+++ b/apps/openbooks/ci/goss.yaml
@@ -1,7 +1,7 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  node:
+  openbooks:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
