--- a/apps/openbooks/Dockerfile
+++ b/apps/openbooks/Dockerfile
@@ -5,4 +5,4 @@ FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:8a0e46c40c2d2a57ba83cf20409d6a4
 WORKDIR /app
 COPY --from=upstream /app/openbooks /app/openbooks
 ENV BOOKS_PATH=/storage/elfstorage/books
-ENTRYPOINT ["./openbooks", "server", "--dir", "$BOOKS_PATH", "--port", "8000", "--name", "elfhosted.com"]
+ENTRYPOINT ["./openbooks", "server", "--dir", "/storage/elfstorage/books", "--port", "8000", "--name", "elfhosted.com"]
