irc usernames can't have a dot in them, dumbass
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/openbooks/Dockerfile
+++ b/apps/openbooks/Dockerfile
@@ -4,5 +4,6 @@ FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:8a0e46c40c2d2a57ba83cf20409d6a4
 
 WORKDIR /app
 COPY --from=upstream /app/openbooks /app/openbooks
-ENV BOOKS_PATH=/storage/elfstorage/books
-ENTRYPOINT ["./openbooks", "server", "--dir", "/storage/elfstorage/downloads/completed", "--port", "8000", "--name", "elfhosted.com", "--tls=false", "--persist", "-s irc.irchighway.net:6660", "--no-browser-downloads"]
+ENTRYPOINT ["./openbooks", "server", "--dir", "/storage/elfstorage/downloads/completed", "--port", "8000", "--name", "elfhosted-user", "--tls=false", "--persist", "-s irc.irchighway.net:6660", "--no-browser-downloads"]
+
+
