--- a/apps/jdownloader/Dockerfile
+++ b/apps/jdownloader/Dockerfile
@@ -16,7 +16,7 @@ COPY ./${ARCH}/*.jar /opt/JDownloader/libs/
 # which is compiled against libstdc++
 RUN mkdir -p /opt/JDownloader/app && \
     apk add --update libstdc++ ffmpeg wget && \
-    wget -O /opt/JDownloader/JDownloader.jar "http://installer.jdownloader.org/JDownloader.jar?$RANDOM" && \
+    wget -O /opt/JDownloader/JDownloader.jar "http://installer.jdownloader.org/JDownloader.jar" && \
     chmod 777 /opt/JDownloader/ -R && \
     apk del wget --purge && \
     rm /usr/bin/qemu-*-static
