--- a/apps/qbittorrent/Dockerfile
+++ b/apps/qbittorrent/Dockerfile
@@ -57,5 +57,5 @@ RUN wget --progress=dot:giga \
 COPY ./apps/qbittorrent/entrypoint.sh /entrypoint.sh
 
 # Properly handle shutdown signal
-ENTRYPOINT [ "/usr/bin/tini", "--" ]
+ENTRYPOINT [ "/sbin/tini", "--" ]
 CMD ["/entrypoint.sh"]
