--- a/apps/rclone/ci/goss.yaml
+++ b/apps/rclone/ci/goss.yaml
@@ -1,19 +1,28 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-# process:
-#   rtorrent:
-#     running: true
-#   nginx:
-#     running: true    
-
+process:
+  rclone:
+    running: true
+    skip: false
+  
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:5800:
+  tcp6:5572:
     listening: true
+  tcp6:5573:
+    listening: true  
+  tcp6:5573:
+    listening: true      
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:5800:
+  http://localhost:5572:
     status: 200
     timeout: 5000
+  http://localhost:5573:
+    status: 200
+    timeout: 5000   
+  http://localhost:5574:
+    status: 200
+    timeout: 5000        
