Fix permissions for rclone
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/rclone/Dockerfile
+++ b/apps/rclone/Dockerfile
@@ -1,8 +1,9 @@
 ARG VERSION
 FROM ghcr.io/geek-cookbook/alpine:edge@sha256:e3c6418b5a0b2b9f2dae2265e98fd6416dc5ce551dc63ff382bff52de7893e37
 
-ENV PUID=568
-ENV PGID=568
+ENV TZ="UTC" \
+  PUID="568" \
+  PGID="568"
 
 # Install S6
 RUN set -xe \
@@ -17,9 +18,6 @@ RUN set -xe \
 
 # Define build arguments
 ARG RCLONE_VERSION=current
-
-# Define environment variables
-ENV ARCH=amd64
 
 # Define working directory.
 WORKDIR /tmp
@@ -37,14 +35,20 @@ RUN apk add --no-cache rclone
 
 RUN curl -o /tmp/rclone-rc-web-gui.zip -jkSL https://github.com/retifrav/rclone-rc-web-gui/releases/download/v0.4.0/rclone-rc-web-gui.zip \
     && unzip /tmp/rclone-rc-web-gui.zip \
-    && mv /tmp/build /var/lib/rclonefm \
-    && rm -r /tmp/rclone-rc-web-gui.zip
+    && mv /tmp/build /var/lib/rclonefm
+
+RUN curl -o /tmp/rcloneui.zip -jkSL https://github.com/rclone/rclone-webui-react/releases/download/v2.0.5/currentbuild.zip \
+    && unzip /tmp/rcloneui.zip \
+    && mv /tmp/build /var/lib/rcloneui
 
 RUN curl -o /tmp/rclone-webui-angular.zip -jkSL https://github.com/yuudi/rclone-webui-angular/releases/download/v0.7.0/embed.zip \
     && unzip /tmp/rclone-webui-angular.zip \
     && mv /tmp/build /var/lib/rclonewebui \
-    && rm -r /tmp/rclone-webui-angular.zip \
+    && rm -r /tmp/rclone-* \
     && apk del --purge curl    
+
+
+
 
 # Add files.
 COPY apps/rclone/rootfs/ /
