--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -15,7 +15,6 @@ RUN apt-get update && apt-get install -y \
 	inotify-tools \
 	tcpdump \
 	mysql-client \
-	postgresql-client \
 	dumb-init \
 	net-tools \
 	vnstat \
@@ -43,6 +42,11 @@ RUN apt-get update && apt-get install -y \
 	chown root:root /usr/local/bin/rclone && \
 	chmod 755 /usr/local/bin/rclone
 
+
+# Setup psql 15 client, which is not in ubuntu:focal/jammy yet:
+RUN echo deb [arch=amd64,arm64,ppc64el signed-by=/usr/share/keyrings/postgresql.gpg] http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main | sudo tee -a /etc/apt/sources.list.d/postgresql.list && \
+	apt-get update && \
+	apt install postgresql-client-15
 
 # Setup s3cmd config
 # hadolint ignore=SC2016
