--- a/apps/radarr/ci/goss.yaml
+++ b/apps/radarr/ci/goss.yaml
@@ -11,7 +11,7 @@ port:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:7878:
-    status: 200
-    timeout: 30000
+# http:
+#   http://localhost:7878:
+#     status: 200
+#     timeout: 30000
